Update 'go-xfaqnzru' component image to: quay.io/rhtap_qe/go-xfaqnzru:74bef0b512ee3d5ac46c40ce2dcc483572cde61c@sha256:ea7432a4d603f3d93339e34fed641ec656719f6efbc844076ae844c1930c4a79

--- a/components/go-xfaqnzru/overlays/development/deployment-patch.yaml
+++ b/components/go-xfaqnzru/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-xfaqnzru
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-xfaqnzru:74bef0b512ee3d5ac46c40ce2dcc483572cde61c@sha256:ea7432a4d603f3d93339e34fed641ec656719f6efbc844076ae844c1930c4a79
+          name: container-image
